Changed Login Page Background and MobileNo field changed to Contact No

--- a/Aayojakah/Views/Registration/Registration.cshtml
+++ b/Aayojakah/Views/Registration/Registration.cshtml
@@ -26,7 +26,7 @@
                         <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
                     <div class="col-lg-4">
-                        <label class="control-label" asp-for="Mobileno">Mobileno</label>
+                        <label class="control-label" asp-for="Mobileno">Contact No</label>
                         <input asp-for="Mobileno" maxlength="10" name="Mobileno" onkeydown="return OnlyNumeric(this);" type="text" class="form-control" />
                         <span asp-validation-for="Mobileno" class="text-danger"></span>
                     </div>
