--- a/Aayojakah/Views/ShowAllBooking/AllBookings.cshtml
+++ b/Aayojakah/Views/ShowAllBooking/AllBookings.cshtml
@@ -8,7 +8,7 @@
     <br />
     <div style="width:90%; margin:0 auto;">
 
-        <table id="myTable" class="table table-striped table-bordered dt-responsive nowrap" width="100%" cellspacing="0">
+        <table id="myTable" class="table table-striped table-bordered dt-responsive nowrap" width="100%" cellspacing="0" height="25px;">
             <thead>
                 <tr>
                     <th>BookingID</th>
