--- a/Aayojakah/Views/Home/Index.cshtml
+++ b/Aayojakah/Views/Home/Index.cshtml
@@ -2,7 +2,71 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+<head>
+    <style>
+        .logo {
+            float: left;
+            padding-left: 2px;
+            
+        }
+        .navbar-brand{
+            margin:0;
+            padding:0;
+
+        }
+
+        .logo {
+            height: 40px;
+            padding-right: 15px;
+            padding-left: 5px;
+           
+        }
+
+        .navbar-collapse {
+            float: right;
+            
+        }
+        .home:hover {
+            
+            background-color: black;
+            border-radius:3px;
+        }
+        .b1:hover{
+            color:black;
+        }
+        
+    </style>
+</head>
+
+<nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#151b54">
+    <div class="container">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#" ><img src="~/Aayojakah.png"  class="img-responsive logo" /></a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+        </div>
+        
+        <div class="navbar-collapse collapse">
+
+            <ul class="nav navbar-nav">
+                <li class="home"><a class="b1">Home</a></li>
+                <li class="home"><a>About Us</a></li>
+                <li class="home"><a>Contact Us</a></li>
+                <li class="home"><a>Sign Up</a></li>
+                <li class="home"><a>Login</a></li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
+
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000" style="margin-top:50px;">
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -65,44 +129,4 @@
     </a>
 </div>
 
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core MVC</li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518004">Bower</a> for managing client-side libraries</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398600">Add a Controller and View</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699318">Add client packages using Bower.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run & Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure Web Apps</a></li>
-        </ul>
-    </div>
-</div>
+
