--- a/Aayojakah/Views/Home/Index.cshtml
+++ b/Aayojakah/Views/Home/Index.cshtml
@@ -57,8 +57,8 @@
                 <li class="home"><a class="b1">Home</a></li>
                 <li class="home"><a>About Us</a></li>
                 <li class="home"><a>Contact Us</a></li>
-                <li class="home"><a>Sign Up</a></li>
-                <li class="home"><a>Login</a></li>
+                <li class="home"><a asp-controller="Registration" asp-action="Registration">Sign Up</a></li>
+                <li class="home"><a asp-controller="Login" asp-action="Login" >Login</a></li>
 
             </ul>
         </div>
