--- a/Aayojakah/Views/Home/Index.cshtml
+++ b/Aayojakah/Views/Home/Index.cshtml
@@ -1,12 +1,14 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<title>Aayojakah - The Event Organizers</title>
 
 <head>
     <style>
         .logo {
             float: left;
             padding-left: 2px;
+            margin-left:100px;
             
         }
         .navbar-brand{
@@ -41,7 +43,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#151b54">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#" ><img src="~/Aayojakah.png"  class="img-responsive logo" /></a>
+            <a class="navbar-brand" href="#" ><img src="~/My project (4).png"  class="img-responsive logo" /></a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
