--- a/Aayojakah/Views/Login/Login.cshtml
+++ b/Aayojakah/Views/Login/Login.cshtml
@@ -13,6 +13,35 @@
 
 
 </head>
+<div>
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#151b54">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#"><img src="~/My project (4).png" class="img-responsive logo" /></a>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+
+            </div>
+
+            <div class="navbar-collapse collapse">
+
+                <ul class="nav navbar-nav">
+                    <li class="home"><a class="b1" asp-action="Index" asp-controller="Home">Home</a></li>
+                    <li class="home"><a>About Us</a></li>
+                    <li class="home"><a>Contact Us</a></li>
+                    <li class="home"><a asp-controller="Registration" asp-action="Registration">Sign Up</a></li>
+                    
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
+
 
 <div class="wrapper">
     <h1>Login</h1>
@@ -23,7 +52,7 @@
 <p class="alert alert-danger" id="successMessage">@ViewBag.errormessage</p>}
 
 
-    <div class="logo">
+    <div class="logo1">
         <img src="~/Aayojakah.png" alt="">
     </div>
 
@@ -46,9 +75,8 @@
         </div>
         <button class="btn mt-3">Login</button>
     </form>
-    <div class="register" style="text-align: center;">
-        @Html.ActionLink("Create Account", "Registration", "Registration")
-    </div>
+    
+    
 </div>
 
 
