--- a/Aayojakah/wwwroot/css/registration.css
+++ b/Aayojakah/wwwroot/css/registration.css
@@ -5,29 +5,118 @@
 
     font-weight: 200;
     color: black;
+}
+
+.panel {
+    background-color: transparent;
+    border: none;
+}
+
+.wrapper .row {
+    padding: 5px;
     
 }
 
-.panel{
-    background-color:transparent;
-    border: solid 2px blue;
-}
 
-.row{
-    padding:5px;
-}
-
-
-.panel-heading{
+.panel-heading {
     font-size: 3em;
-    text-align:center;
-    font-weight: 700;
+    text-align: center;
+    font-weight: 800;
     color: midnightblue;
-    
+    margin:0;
 }
 
-.panel panel-default{
+.panel panel-default {
     background-color: cadetblue;
-    border:solid 2px solid;
 }
 
+.wrapper {
+    max-width: fit-content;
+    min-height: contain;
+    margin: 25px auto;
+    padding: 40px 30px 30px 30px;
+    background-color: #ecf0f3;
+    border-radius: 15px;
+    box-shadow: 13px 13px 10px #cbced1, -13px -13px 20px #fff;
+}
+
+
+    .wrapper .form-field input {
+        margin: 4px;
+        text-decoration: none;
+        border-radius: 25px;
+        /*display: block;*/
+        border: none;
+        outline: none;
+        background: none;
+        font-size: 1.2rem;
+        color: #666;
+        padding: 10px 15px 10px 10px;
+    }
+
+    .wrapper .form-field select {
+        margin: 4px;
+        text-decoration: none;
+        width: 100%;
+        border-radius: 25px;
+        display: block;
+        border: none;
+        outline: none;
+        background: none;
+        font-size: 1.2rem;
+        color: #666;
+        padding: 10px 15px 10px 10px;
+    }
+
+
+.logo1 {
+    width: contain;
+    
+    padding-bottom: 10px;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+    .logo1 img {
+        
+        width: 40%;
+        height: 40%;
+        object-fit: cover;
+        border-block: ridge;
+        
+        border-radius: 1em;
+        box-shadow: 0px 0px 3px #5f5f5f, 0px 0px 0px 5px #ecf0f3, 8px 8px 15px #a7aaa7, -8px -8px 15px #fff;
+    }
+
+    .wrapper .container{
+        padding-top:2px;
+    }
+
+    a:hover{
+        text-decoration:none;
+         
+    }
+
+
+.logo {
+    float: left;
+    padding-left: 2px;
+    margin-left: 100px;
+}
+
+.navbar-brand {
+    margin: 0;
+    padding: 0;
+}
+
+.logo {
+    height: 40px;
+    padding-right: 15px;
+    padding-left: 5px;
+}
+
+.navbar-collapse {
+    float: right;
+}
+
+    
