--- a/Aayojakah/Views/Home/Index.cshtml
+++ b/Aayojakah/Views/Home/Index.cshtml
@@ -1,49 +1,20 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<title>Aayojakah - The Event Organizers</title>
+
+
 
 <head>
-    <style>
-        .logo {
-            float: left;
-            padding-left: 2px;
-            margin-left:100px;
-            
-        }
-        .navbar-brand{
-            margin:0;
-            padding:0;
+    <title>Aayojakah - The Event Organizers</title>
+    <link rel="stylesheet" href="~/css/home.css" />
+    
 
-        }
-
-        .logo {
-            height: 40px;
-            padding-right: 15px;
-            padding-left: 5px;
-           
-        }
-
-        .navbar-collapse {
-            float: right;
-            
-        }
-        .home:hover {
-            
-            background-color: black;
-            border-radius:3px;
-        }
-        .b1:hover{
-            color:black;
-        }
-        
-    </style>
 </head>
 
 <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#151b54">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#" ><img src="~/My project (4).png"  class="img-responsive logo" /></a>
+            <a class="navbar-brand" href="#"><img src="~/My project (4).png" class="img-responsive logo" /></a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -52,15 +23,15 @@
             </button>
 
         </div>
-        
+
         <div class="navbar-collapse collapse">
 
             <ul class="nav navbar-nav">
                 <li class="home"><a class="b1">Home</a></li>
-                <li class="home"><a>About Us</a></li>
-                <li class="home"><a>Contact Us</a></li>
+                <li class="home"><a href="#aboutus">About Us</a></li>
+                <li class="home"><a href="#contactus">Contact Us</a></li>
                 <li class="home"><a asp-controller="Registration" asp-action="Registration">Sign Up</a></li>
-                <li class="home"><a asp-controller="Login" asp-action="Login" >Login</a></li>
+                <li class="home"><a asp-controller="Login" asp-action="Login">Login</a></li>
 
             </ul>
         </div>
@@ -130,5 +101,4 @@
         <span class="sr-only">Next</span>
     </a>
 </div>
-
 
