--- a/Aayojakah/Views/Home/Index.cshtml
+++ b/Aayojakah/Views/Home/Index.cshtml
@@ -4,10 +4,10 @@
 
 <head>
     <style>
+      
         .logo {
             float: left;
             padding-left: 2px;
-            
         }
         .navbar-brand{
             margin:0;
@@ -34,6 +34,79 @@
         .b1:hover{
             color:black;
         }
+
+        .top-section {
+            margin:0;
+            background-color: black;
+            box-shadow: 2px 2px 2px 0px ;
+            position:relative;
+        }
+
+        .top-section img {
+            opacity: 1;
+            display: block;
+            height: 100%;
+            width: 100%;
+            border: none;
+            margin: 0;
+            padding-left: 0;
+            object-fit: cover;
+            transition: .5s ease;
+            backface-visibility: hidden;
+
+            
+           
+        }
+        .middle {
+            transition: .5s ease;
+            opacity: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            text-align: center;
+        }
+        .top-section:hover img {
+            opacity: 0.2;
+        }
+            
+        .top-section:hover .middle {
+            opacity: 1;
+        }
+            
+        
+        .top-text{
+            color:white;
+            font-size:35px;
+            font-family:'Freestyle Script';
+            text-shadow:1px 1px 2px;
+        }
+        .sign {
+            background-color:transparent;
+            border:solid;
+            border-block-color:floralwhite;
+            color: floralwhite;
+            font-size: 16px;
+            padding:15px;
+            margin-top:5px;
+            margin-left:200px;
+            margin-right:200px;
+        }
+        .sign a{
+            color:floralwhite;
+        }
+        .sign:hover {
+                
+                border: inherit;
+                box-shadow: 0px 0px 0px 2px;
+         }
+                        
+        
+  
+        
+        
+
         
     </style>
 </head>
@@ -64,6 +137,19 @@
         </div>
     </div>
 </nav>
+
+<div class="main-container">
+    <div class="top-section">
+        <img src="~/Homepage images/imaage.jpg" />
+        <div class="middle">
+            <div class="top-text"> “People make events into stories. Stories give events meaning.”</div>
+            <div class="sign"><a asp-controller="Login" asp-action="Login" >Sign In</a></div>
+        </div>
+        <div class="middle">
+            
+        </div>
+    </div>
+</div>
 
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000" style="margin-top:50px;">
