--- a/Aayojakah/Views/Home/Index.cshtml
+++ b/Aayojakah/Views/Home/Index.cshtml
@@ -2,16 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<head>
-    <style>
-        .logo {
-            float: left;
-            padding-left: 2px;
-            
-        }
-        .navbar-brand{
-            margin:0;
-            padding:0;
+
 
 <head>
     <title>Aayojakah - The Event Organizers</title>
@@ -54,9 +45,13 @@
             <div class="top-text"> “People make events into stories. Stories give events meaning.”</div>
             <div class="sign"><a asp-controller="Login" asp-action="Login" >Sign In</a></div>
         </div>
-        <div class="middle">
-            
-        </div>
+    </div>
+    <div class="qoute">
+        <h3>THE ORGANIZING</h3>
+        <div class="def">Brilliant Event Planning is an award-winning, luxury wedding and event planning company in NYC and Boston for fun-loving, busy couples that value creativity and quality. We draw our inspiration from YOU and your story to create one-of-a-kind weddings and events. We work collaboratively to ensure your event is cohesive and thoughtful and believe that even the smallest details can have a huge impact. We pride ourselves on our comprehensive event management so that you can have a flawless and stress-free planning experience! </div>
+    </div>  
+    <div class="mid-section2">
+        <div class="services">OUR SERVICES</div>
     </div>
 </div>
 
