--- a/Aayojakah/wwwroot/css/home.css
+++ b/Aayojakah/wwwroot/css/home.css
@@ -82,9 +82,9 @@
 
 .top-text {
     color: white;
-    font-size: 35px;
+    font-size: 40px;
     font-family: 'Freestyle Script';
-    text-shadow: 1px 1px 2px;
+    text-shadow: 1px 1px 2px black;
 }
 
 .sign {
@@ -134,7 +134,7 @@
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    text-align:center;
+    text-align:justify;
 }
 
 .mid-section2 {
@@ -143,7 +143,7 @@
 
 }
 
-.services {
+.services{
     display: block;
     font-family: "Astralaga";
     text-align: center;
